[package]
name = "tx-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
csv = "1.1.6"
anyhow = "1.0"